samples/_failures_safe/1761002344_facc09_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e85a6e9.c: In function ‘main’:
./samples/SAFE/__tmp_8e85a6e9.c:152:5: error: expected expression at end of input
  152 |     if (input_len > 0 && input_buffer[input_len - 1] == '\n')
      |     ^~
./samples/SAFE/__tmp_8e85a6e9.c:152:5: error: expected declaration or statement at end of input
